# camera-backend

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  build_time.sh  dockerfile  dockerfile.dev  dockerfile.release  run_time.py  update_dev.sh
core/: CMakeLists.txt
core/src/: CMakeLists.txt
core/src/camera_driver/: CMakeLists.txt
core/src/camera_driver/src/: adapter.h  camera_container.h  camera_descriptor.h  camera_driver.h  camera_parameter.h  capability.h  event_handlers.h  exceptions.h  frame.h  frame_handler.h  framework.cpp  framework.h  status.h
core/src/camera_driver/src/aravis/: CMakeLists.txt  aravis_adapter.cpp  aravis_adapter.h  aravis_camera.cpp  aravis_camera.h  aravis_camera_internal.cpp  aravis_camera_template_impl.tcc
core/src/camera_driver/src/aravis/test/: test_aravis_driver.cpp
core/src/camera_driver/src/test/: test_framework.cpp
core/src/grpc_server/: CMakeLists.txt
core/src/grpc_server/protos/: camera_definitions.grpc.pb.cc  camera_definitions.grpc.pb.h  camera_definitions.pb.cc  camera_definitions.pb.h  camera_service.grpc.pb.cc  camera_service.grpc.pb.h  camera_service.pb.cc  camera_service.pb.h
core/src/grpc_server/src/: config.cpp  config.h  error.cpp  error.h  main.cpp  server.cpp  server.h  server_auxiliary_impl.cpp
core/src/grpc_server/test/: test_grpc_server.cpp
core/src/shared/: CMakeLists.txt
core/src/shared/src/: finally.h  logging.cpp  logging.cpp_  logging.h  logging.h_
docker/: Dockerfile.arm64  Dockerfile.env.arm64  build.py  build_docker.sh  build_docker_env.sh
environment/driver_install/VimbaUSBTL/: Install.sh  Uninstall.sh
environment/scripts/: build_time.sh
src/: CMakeLists.txt  camera.c  camera.h  main.c  main.h
